# urdu-typesetter

./: .gitignore  README.md  cspell.yaml  index.html  requirements.txt  urdu-dic
artifacts/behzad-lakhnavi/ai-jazba-e-dil/: ai-jazba-e-dil.epub  ai-jazba-e-dil.html  ai-jazba-e-dil.kfx
artifacts/behzad-lakhnavi/ai-jazba-e-dil/assets/css/: urdu.css
artifacts/faiz-ahmed-faiz/kutay/: kutay.epub  kutay.html  kutay.kfx
artifacts/ghulam-abbas/aanandi/: aanandi.epub  aanandi.html  aanandi.kfx
assets/css/: index.css
builders/common/template/assets/css/: urdu.css
builders/html/: Makefile  build.py  preview.py
builders/html/template/: story.html.template
builders/html/template/assets/css/: urdu.css
builders/pdf/: Makefile  build.py
builders/pdf/template/: story.tex.template
data/behzad-lakhnavi/ai-jazba-e-dil/: format.yaml  source.yaml
data/faiz-ahmed-faiz/kutay/: format.yaml  source.yaml
data/ghulam-abbas/aanandi/: cover.tiff  source.yaml  story.yaml
toolchain/: Dockerfile  bidi.tar  entrypoint  pyproject.toml  requirements-dev.txt  urdu-builder
toolchain/assets/css/: urdu.css
toolchain/src/urdu_builder/: __init__.py  __main__.py  preview.py
toolchain/templates/common/: source.html.template  story.html.template
toolchain/templates/common/assets/css/: urdu.css
toolchain/templates/epub/OEBPS/: content.opf.template  source.html.template  toc.html.template  toc.ncx.template
toolchain/templates/pdf/: source.tex.template
urdu-word-lists/: cle-split  project
