[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urdu_builder"
version = "0.0.1"
authors = [
    { name="Abid H. Mujtaba", email="abid.naqvi83@gmail.com" },
]
description = "Read urdu literature source (yaml) and inject into templates"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "dist/",
    "Dockerfile",
    "urdu-builder",
]
