[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urdu_builder"
version = "0.0.1"
authors = [
    { name="Abid H. Mujtaba", email="abid.naqvi83@gmail.com" },
]
description = "Read urdu literature source (yaml) and inject into templates"
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "livereload",
    "ruyaml",
    "schema",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy",
    "pylint",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "assets/",
    "dist/",
    "Dockerfile",
    "templates/",
    "urdu-builder",
]
